# parcae

./: .gitignore  AGENTS.md  ParcaeStrategy.code-workspace  README.md  parcaegame.txt  pyproject.toml  render.yaml  run_dev_stack.sh  run_rust.sh  train_centurion_full.sh
.github/: copilot-instructions.md
models/: README.md
models/rust/: parcae_model.onnx
notebooks/: abaddon_colab_train.ipynb
rust/: Cargo.toml
rust/ai/: Cargo.toml
rust/ai/src/: lib.rs
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
rust/wasm-ui/: Cargo.toml  index.html
rust/wasm-ui/src/: lib.rs
rust/wasm-ui/static/: styles.css
scripts/: abaddon_colab_12h.json  eval_models.py  export_onnx.py  render_smoke.sh
src/parcaestrategy/: __init__.py  cli.py  engine.py  mcp_server.py
src/parcaestrategy/ai/: __init__.py  agent.py  model.py  selfplay.py  train.py
src/parcaestrategy/api/: __init__.py  app.py
tests/: test_abaddon_model.py  test_ai_agent.py  test_api_modes.py  test_engine.py  test_smoke.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  api.ts  coords.ts  main.tsx  styles.css  types.ts
web/src/components/: Board.css  Board.tsx
