[workspace]
members = [
    "engine",
    "ai",
    "server",
    "wasm-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["ParcaeStrategy"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
dashmap = "6"
rand = "0.8"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_with = { version = "3", features = ["macros", "json"] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Request", "TouchEvent", "PointerEvent"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4"
serde_repr = "0.1"
wasm-logger = "0.2"
ndarray = "0.16"

[workspace.metadata]
models.python = "models/python/parcae_model.pth"
models.rust = "models/rust/parcae_model.onnx"
