[package]
name = "ai"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
engine = { path = "../engine" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
ort = { workspace = true, optional = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
ndarray = { workspace = true }

[features]
default = []
onnx = ["ort"]
